--- a/Dataacquisition_casestudy.ipynb
+++ b/Dataacquisition_casestudy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNt2hJ60iOiyU6kxFEjdzvF",
+      "authorship_tag": "ABX9TyMBAguBLzMVI8wfT9dfZ0x2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -889,15 +889,18 @@
     {
       "cell_type": "code",
       "source": [
-        "Mean of 'age': 54.366336633663366\n",
-        "Median of 'age': 55.0\n",
-        "Standard Deviation of 'age': 9.082100989837857\n",
-        "\n",
-        "\n",
         "#summary\n",
         "The mean and median ages are close, indicating a fairly symmetric age distribution.\n",
         "The standard deviation suggests moderate variability,with ages spread around the mean.\n",
-        "Overall, the age data appears to be reasonably balanced and not heavily skewed."
+        "Overall, the age data appears to be reasonably balanced and not heavily skewed.\n",
+        "\n",
+        "The identified outliers are significantly higher than typical values in the 'trestbps' column, with some reaching as high as 200 mmHg.\n",
+        "These values may indicate either high blood pressure or potential data entry errors.\n",
+        "\n",
+        "\n",
+        "Chest Pain Type and Maximum Heart Rate are moderately to strongly associated with heart disease, suggesting their importance in diagnosing or predicting heart conditions.\n",
+        "ST Depression and Exercise-Induced Angina have significant negative correlations with heart disease, indicating their potential role in diagnosing heart conditions.\n",
+        "Age and Resting Blood Pressure show moderate correlations with other factors, suggesting a broader context in heart health assessments.\n"
       ],
       "metadata": {
         "id": "WoEEbSYyjZc0"
